--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "expo-device": "~6.0.2"
+    "expo-device": "~6.0.2",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
